setting default height and width to prevent event overlapping

--- a/_sass/home.sass
+++ b/_sass/home.sass
@@ -46,12 +46,17 @@
       height: 50px
 
   .event-container
+    position: relative
+    
     .grid
       position: relative
       min-height: calc(100vh - 184px)
 
       .event-item
         padding: 5px
+        min-height: 340px
+        min-width: 290px
+        position: relative
       
         .event-item-link
           position: relative
